# live-agentic-database

./: README.md  docker-compose.yml
crewai-a2a-server/: docker-compose.yml
frontend/src/common/: environment.ts
frontend/src/components/auth/: AuthForm.tsx
frontend/src/components/layout/: Header.tsx  Sidebar.tsx
frontend/src/pages/: ChatPage.tsx
frontend/src/styles/: theme.ts
live-a2a-server/: README.md  docker-compose.yml  pyproject.toml  user_personal_data.sql
live-a2a-server/src/: agent.py  agent_executor.py  main_judge-agent.py  main_live_agent.py  tools.py
tests/: conftest.py
